# server

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  create_fixtures.bat  docker-compose.yml  pyproject.toml  schema.yml
.github/workflows/: codeql.yml  development_car-companion.yml  main_car-companion.yml
authentication/: emails.py  serializers.py  tests.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
authentication/templates/: reset_password_form.html
car_companion/: apps.py  asgi.py  manage.py  pyproject.toml  settings.py  urls.py  wsgi.py
car_companion/admin/: __init__.py  user.py  vehicle.py  vehicle_model.py
car_companion/car_companion/: settings.py
car_companion/migrations/: 0001_initial.py  0002_alter_vehicle_year_built.py  0002_remove_vehicle_nickname_vehicleuserpreferences.py
car_companion/models/: __init__.py  component_type.py  manufacturer.py  vehicle.py  vehicle_model.py  vehicle_preferences.py
car_companion/serializers/: color.py  permission.py  vehicle.py  vehicle_component.py  vehicle_preferences.py
car_companion/tests/: __init__.py
car_companion/views/: color.py  permission.py  vehicle.py  vehicle_component.py  vehicle_preferences.py
core/: admin.py  apps.py  serializers.py  settings.py  signals.py  urls.py
docker/: Dockerfile  docker-compose.yml
vehicle/: apps.py  serializers.py  urls.py  views.py
vehicle/admin/: __init__.py  color.py  component.py  component_type.py  group.py  manufacturer.py  user.py  user_and_groups.py  vehicle.py  vehicle_model.py
vehicle/fixtures/: fixture_ownership.json
vehicle/migrations/: 0001_color.py  0002_manufacturer.py  0003_vehiclemodel.py  0004_vehicle.py  0005_componenttype_vehiclecomponent.py  0006_alter_vehiclecomponent_unique_together.py  0007_alter_componenttype_name_alter_manufacturer_name_and_more.py  0008_alter_vehiclecomponent_unique_together.py  0008_manufacturer_country_code_manufacturer_description_and_more.py  0009_color_description_color_hex_code_color_is_metallic_and_more.py  0010_modelcomponent_and_more.py  0011_remove_modelcomponent_is_required.py  0014_vehicle_owner.py  (+8 more)
(+63 files in other folders)
