[tool.poetry]
name = "car-companion"
version = "0.1.0"
description = ""
authors = ["Mohammadali Azani <ali_azani@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
psycopg2 = "^2.9.10"
django-environ = "^0.11.2"
django-debug-toolbar = "^4.4.6"
djangorestframework-simplejwt = "^5.3.1"
djangorestframework = "^3.15.2"
djoser = "^2.2.3"
social-auth-app-django = "^5.4.2"
drf-spectacular = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
